Apply i18n to file indexer state

BUG: 477274